--- a/src/templates/default/pc/tenant/template_edit.html
+++ b/src/templates/default/pc/tenant/template_edit.html
@@ -71,6 +71,8 @@
 				optimizeData.push(t);
 			});
 			function init() {
+				console.log(fileOptimize)
+				$(`input[name=download_method][value='${fileOptimize['download_method']}']`).prop("checked",true);
 				$("#file-info").html(fileOptimize.filename);
 				// $("#iframe").html(`<iframe style="height: 100%; width: 100%;" class="attachment-viewer-frame-preview-iframe js-stop" src="https://view.officeapps.live.com/op/embed.aspx?src=${'https://go.microsoft.com/fwlink/?LinkID=521962'}"></iframe>`);
 				$.each(optimizeData, (index, value)=>{
@@ -99,6 +101,7 @@
 													<th class="tcus str thcus">必須？</th>
 													<th class="tcus str thcus">選択肢</th>
 													<th class="tcus str thcus">初期値</th>
+													<th class="tcus str thcus" style="width: 100px;" >Actions</th>
 												</tr>`
 					$.each(value, function(i, item){
 						xhtml += `	<tr class="tcus">
@@ -118,7 +121,10 @@
 											<input type="text" value="${item.value}" name="value[]" class="inputtextcs" placeholder="30,40,50">
 										</th>
 										<th class="tcus">
-											<input type="text" value="${item.default}" name="default[]" class="inputtextcs">
+											<input type="text" value="${item.default}" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+										</th>
+										<th class="tcus">
+											<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
 										</th>
 									</tr>`;
 					});
@@ -163,11 +169,11 @@
 			handler:function(){
 				var dataTable = [];
 				if(fileBlobKey == null){
-					Ext.Msg.alert("Notice", "テンプレートファイルアップロード");
+					Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_FILE_TEMPLATE);
 					return;
 				}
 				if(Ext.ucf.getElementValue('FILED_display_name').trim() == ""){
-					Ext.Msg.alert("Notice", "Display name is required");
+					Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_DISPLAY_NAME);
 					return;
 				}
 				var reduceData = [];
@@ -217,7 +223,7 @@
 				frmData.append("sheetName", JSON.stringify(gSheets))
 				frmData.append("unique_id", '{{unique_id}}')
 				frmData.append("display_name", Ext.ucf.getElementValue('FILED_display_name'))
-
+				frmData.append("download_method", parseInt($("input[type='radio'][name='download_method']:checked").val()));
 				loading.show();
 				fetch('{{vurl|safe}}submit_edit_template', {
 					method: "post",
@@ -229,17 +235,17 @@
 				}).then(res=>{
 					loading.hide();
 					if(res.status){
-						Ext.Msg.alert("Notice", "Sucessfully", function(btn, text){
+						Ext.Msg.alert("Notice", _msg.SUCCESS, function(btn, text){
 							if (btn == 'ok'){
 								window.location.href = '{{vurl|safe}}template'
 							}
 						});
 					}else{
-						Ext.Msg.alert("Notice", "Something went wrong !");
+						Ext.Msg.alert("Notice", _msg.FAILED);
 					}
 				}).catch(function(e){
 					loading.hide();
-					Ext.Msg.alert("Notice", "Something went wrong !");
+					Ext.Msg.alert("Notice", _msg.FAILED);
 				})
 			}
 		});
@@ -251,7 +257,7 @@
 				text: 'Add More',
 				handler: function(){
 					if(currentSheet == null){
-						Ext.Msg.alert("Notice", "テンプレートファイルアップロード");
+						Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_FILE_TEMPLATE);
 					}
 					$("#table_question"+currentSheet).append(`{% include "./template_table_tr.html" %}`);
 				}
@@ -354,6 +360,15 @@
 											</table>`);
 			});
 		}
+		$(function(){
+			$("body").on("click", ".btn-del", function(){
+				if($(".btn-del").length == 1){
+					Ext.Msg.alert("Notice", "Table can't empty.");
+					return;
+				}
+				$(this).closest('tr').remove();
+			});
+		});
 		
 	</script>
 	{% include "./include/external_analysis_head.html" %}
@@ -385,7 +400,9 @@
 								<td class="layout_td layout_td_all2">
 									<div class="d-flex">
 										<div style="width: 40%;">
-											<p style="text-align: left;"><b>テンプレートファイルアップロード</b></p>
+											<p class="text-left">{{lang.VMSG_DISPLAY_NAME}}:</p>
+											<div id="display_name" style="margin-left: 8px; margin-bottom: 5px;text-align: left;"></div>
+											<p style="text-align: left;"><b>{{lang.MSG_FILE_TEMPLATE}}</b></p>
 											<div style="text-align: left;">
 												<div style="width: 100px;">
 													<label for="file_template">
@@ -398,7 +415,7 @@
 														border: 1px solid #bbbbbb;
 														cursor: pointer;
 														margin-left: 8px;">
-															<img src="/images/microsoft-excel.png" alt="">
+															<img width="80" src="/images/microsoft-excel.png" alt="">
 														</div>
 													</label>
 												</div>
@@ -408,8 +425,15 @@
 											
 											<!-- <div id="select_sheet"></div> -->
 											<div id="select_sheet" style="margin-left: 8px; margin-bottom: 5px;"></div>
-											<p class="text-left">Display Name:</p>
-											<div id="display_name" style="margin-left: 8px; margin-bottom: 5px;text-align: left;"></div>
+											<p class="text-left">Download method:</p>
+											<div style="margin-left: 8px; margin-bottom: 5px;text-align: left;">
+												<input type="radio" id="pdf" name="download_method" value="1">
+												<label for="pdf" style="font-size: 80%;">PDF</label><br>
+												<input type="radio" id="excel" name="download_method" value="2">
+												<label for="excel" style="font-size: 80%;">Excel</label><br>
+												<input type="radio" id="other" name="download_method" checked value="0">
+												<label for="other" style="font-size: 80%;">ユーザーに選択</label>
+											</div>
 										</div>
 										<div style="width: 60%;" id="iframe">
 											
