--- a/src/templates/default/pc/tenant/template_table.html
+++ b/src/templates/default/pc/tenant/template_table.html
@@ -4,6 +4,7 @@
 	<th class="tcus str thcus">必須？</th>
 	<th class="tcus str thcus">選択肢</th>
 	<th class="tcus str thcus">初期値</th>
+	<th class="tcus str thcus" style="width: 110px;">Actions</th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
@@ -24,45 +25,8 @@
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
-</tr>
-<tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
-	</th>
-	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
-	</th>
-	<th class="tcus">
-		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
-		</select>
-	</th>
-	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
-	</th>
-	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
-	</th>
-</tr>
-<tr class="tcus">
-	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
-	</th>
-	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
-	</th>
-	<th class="tcus">
-		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
-		</select>
-	</th>
-	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
-	</th>
-	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
 	</th>
 </tr>
 <tr class="tcus">
@@ -84,6 +48,9 @@
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+	</th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
@@ -103,5 +70,54 @@
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+	</th>
+</tr>
+<tr class="tcus">
+	<th class="tcus">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+	</th>
+	<th class="tcus">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+	</th>
+	<th class="tcus">
+		<select class="csselect" name="require[]">
+			<option value="0">No</option>
+			<option value="1">Yes</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+	</th>
+	<th class="tcus">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+	</th>
+</tr>
+<tr class="tcus">
+	<th class="tcus">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+	</th>
+	<th class="tcus">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+	</th>
+	<th class="tcus">
+		<select class="csselect" name="require[]">
+			<option value="0">No</option>
+			<option value="1">Yes</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+	</th>
+	<th class="tcus">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
 	</th>
 </tr>
