--- a/src/templates/default/pc/tenant/template_table_tr.html
+++ b/src/templates/default/pc/tenant/template_table_tr.html
@@ -12,9 +12,12 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
 	</th>
 </tr>
