--- a/src/templates/default/pc/tenant/template_table.html
+++ b/src/templates/default/pc/tenant/template_table.html
@@ -26,7 +26,7 @@
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 	<th class="tcus">
-		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
 <tr class="tcus">
@@ -49,7 +49,7 @@
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 	<th class="tcus">
-		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
 <tr class="tcus">
@@ -72,7 +72,7 @@
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 	<th class="tcus">
-		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
 <tr class="tcus">
@@ -95,7 +95,7 @@
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 	<th class="tcus">
-		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
 <tr class="tcus">
@@ -118,6 +118,6 @@
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 	<th class="tcus">
-		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
