--- a/src/templates/default/pc/tenant/template_table_tr.html
+++ b/src/templates/default/pc/tenant/template_table_tr.html
@@ -18,6 +18,6 @@
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 	<th class="tcus">
-		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)">Delete Row</a>
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
