--- a/src/templates/default/pc/tenant/template_edit.html
+++ b/src/templates/default/pc/tenant/template_edit.html
@@ -101,7 +101,7 @@
 													<th class="tcus str thcus">必須？</th>
 													<th class="tcus str thcus">選択肢</th>
 													<th class="tcus str thcus">初期値</th>
-													<th class="tcus str thcus" style="width: 100px;" >{{lang.ACTIONS|safe|escapejs}}</th>
+													<th class="tcus str thcus" style="width: 100px;" >{{lang.ACTIONS|safe}}</th>
 												</tr>`
 					$.each(value, function(i, item){
 						xhtml += `	<tr class="tcus">
@@ -425,7 +425,7 @@
 											
 											<!-- <div id="select_sheet"></div> -->
 											<div id="select_sheet" style="margin-left: 8px; margin-bottom: 5px;"></div>
-											<p class="text-left">{{lang.DOWNLOAD_METHOD|safe|escapejs}}:</p>
+											<p class="text-left">{{lang.DOWNLOAD_METHOD|safe}}:</p>
 											<div style="margin-left: 8px; margin-bottom: 5px;text-align: left;">
 												<input type="radio" id="pdf" name="download_method" value="1">
 												<label for="pdf" style="font-size: 80%;">PDF</label><br>
