--- a/src/templates/default/pc/tenant/template_table.html
+++ b/src/templates/default/pc/tenant/template_table.html
@@ -4,7 +4,7 @@
 	<th class="tcus str thcus">必須？</th>
 	<th class="tcus str thcus">選択肢</th>
 	<th class="tcus str thcus">初期値</th>
-	<th class="tcus str thcus" style="width: 110px;">{{lang.ACTIONS|safe|escapejs}}</th>
+	<th class="tcus str thcus" style="width: 110px;">{{lang.ACTIONS|safe}}</th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
