--- a/src/templates/default/pc/tenant/template_table.html
+++ b/src/templates/default/pc/tenant/template_table.html
@@ -1,29 +1,29 @@
 <tr class="tcus">
-	<th class="tcus str thcus">チャットボット質問</th>
-	<th class="tcus str thcus">挿入セル</th>
-	<th class="tcus str thcus">必須？</th>
-	<th class="tcus str thcus">選択肢</th>
-	<th class="tcus str thcus">初期値</th>
-	<th class="tcus str thcus" style="width: 110px;">{{lang.ACTIONS|safe}}</th>
+	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_QUETION|safe}}</th>
+	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_POSITION|safe}}</th>
+	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_REQUIRE|safe}}</th>
+	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_OPTION|safe}}</th>
+	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_DEAFULT|safe}}</th>
+	<th class="tcus str thcus" style="width: 110px;"></th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="{{lang.CHATBOT_QUESTION|safe}}" class="inputtextcs">
 	</th>
 	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="{{lang.CHATBOT_POSITION|safe}}">
 	</th>
 	<th class="tcus">
 		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
+			<option value="0">{{lang.NO|safe}}</option>
+			<option value="1">{{lang.YES|safe}}</option>
 		</select>
 	</th>
 	<th class="tcus">
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
 	</th>
 	<th class="tcus">
 		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
@@ -31,22 +31,22 @@
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="{{lang.CHATBOT_QUESTION|safe}}" class="inputtextcs">
 	</th>
 	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="{{lang.CHATBOT_POSITION|safe}}">
 	</th>
 	<th class="tcus">
 		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
+			<option value="0">{{lang.NO|safe}}</option>
+			<option value="1">{{lang.YES|safe}}</option>
 		</select>
 	</th>
 	<th class="tcus">
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
 	</th>
 	<th class="tcus">
 		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
@@ -54,22 +54,22 @@
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="{{lang.CHATBOT_QUESTION|safe}}" class="inputtextcs">
 	</th>
 	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="{{lang.CHATBOT_POSITION|safe}}">
 	</th>
 	<th class="tcus">
 		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
+			<option value="0">{{lang.NO|safe}}</option>
+			<option value="1">{{lang.YES|safe}}</option>
 		</select>
 	</th>
 	<th class="tcus">
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
 	</th>
 	<th class="tcus">
 		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
@@ -77,22 +77,22 @@
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="{{lang.CHATBOT_QUESTION|safe}}" class="inputtextcs">
 	</th>
 	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="{{lang.CHATBOT_POSITION|safe}}">
 	</th>
 	<th class="tcus">
 		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
+			<option value="0">{{lang.NO|safe}}</option>
+			<option value="1">{{lang.YES|safe}}</option>
 		</select>
 	</th>
 	<th class="tcus">
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
 	</th>
 	<th class="tcus">
 		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
@@ -100,22 +100,22 @@
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="{{lang.CHATBOT_QUESTION|safe}}" class="inputtextcs">
 	</th>
 	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="{{lang.CHATBOT_POSITION|safe}}">
 	</th>
 	<th class="tcus">
 		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
+			<option value="0">{{lang.NO|safe}}</option>
+			<option value="1">{{lang.YES|safe}}</option>
 		</select>
 	</th>
 	<th class="tcus">
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
 	</th>
 	<th class="tcus">
 		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
