--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -229,7 +229,7 @@
 
 			var file = document.getElementById('file_template').files[0];
 			if(typeof file == 'undefined') {
-				fileBlobKey = null;
+				loading.hide();
 				return;
 			}
 			const fileInfo = file.name + " - " + file.size/1000 + "kB";
@@ -266,7 +266,7 @@
 		}
 		$(function(){
 			$("body").on("click", ".btn-del", function(){
-				if($(".btn-del").length == 1){
+				if($(`#table_question${currentSheet} .btn-del`).length == 1){
 					Ext.Msg.alert("Notice", "Table can't empty.");
 					return;
 				}
